--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "leaflet": "^1.9.4",
     "vue": "^3.2.13",
+    "vue-router": "^4.2.2",
     "vuetify": "^3.3.2"
   },
   "devDependencies": {
